// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KnownIndividualsCard should render 1`] = `
<div>
  <div
    class="card card-root known-individuals-card-root"
  >
    <div
      class="card-header"
    >
      <h5
        class="card-title"
      >
        Known Individuals
      </h5>
    </div>
    <div
      class="table-responsive table-root flex-grow-1"
    >
      <table
        class="table table-autofit table-hover table-heading-nowrap table-nowrap"
      >
        <thead>
          <tr
            class=""
          >
            <th
              class="table-head-title name"
            >
              Individual
            </th>
            <th
              class="table-head-title trendline"
            >
              Engagement
            </th>
            <th
              class="table-head-title score table-column-text-end"
            />
          </tr>
        </thead>
      </table>
      <div
        class="spinner-root spinner-overlay"
      >
        <span
          class="loading-animation loading-animation-dotted"
        />
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-link btn-sm"
        href="/workspace/23/123/contacts/accounts/23/individuals"
      >
        View All Individuals
        <svg
          class="icon-root lexicon-icon lexicon-icon-angle-right"
          viewBox=""
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`KnownIndividualsCard should render w/ ErrorDisplay 1`] = `
<div>
  <div
    class="card card-root known-individuals-card-root"
  >
    <div
      class="card-header"
    >
      <h5
        class="card-title"
      >
        Known Individuals
      </h5>
    </div>
    <div
      class="error-display-root error-spacer no-results-root flex-grow-1"
    >
      <div
        class="no-results-content"
      >
        <h4
          class="no-results-title"
        >
          An unexpected error occurred.
        </h4>
        <button
          class="button-root btn btn-secondary"
          type="button"
        >
          Reload
        </button>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-link btn-sm"
        href="/workspace/23/123/contacts/accounts/23/individuals"
      >
        View All Individuals
        <svg
          class="icon-root lexicon-icon lexicon-icon-angle-right"
          viewBox=""
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`KnownIndividualsCard should render w/ NoResultsDisplay 1`] = `
<div>
  <div
    class="card card-root known-individuals-card-root"
  >
    <div
      class="card-header"
    >
      <h5
        class="card-title"
      >
        Known Individuals
      </h5>
    </div>
    <div
      class="no-results-root flex-grow-1"
    >
      <div
        class="no-results-content spacer"
      >
        <h4
          class="no-results-title"
        >
          There are no Individuals found.
        </h4>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-link btn-sm"
        href="/workspace/23/123/contacts/accounts/23/individuals"
      >
        View All Individuals
        <svg
          class="icon-root lexicon-icon lexicon-icon-angle-right"
          viewBox=""
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
